--- a/NotetasticApi/NotetasticApi.csproj
+++ b/NotetasticApi/NotetasticApi.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Core" Version="1.5.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.1.3" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
   </ItemGroup>
