--- a/NotetasticApi/appsettings.json
+++ b/NotetasticApi/appsettings.json
@@ -1,8 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	"Jwt": {
+		"key": "superdupersecret"
+	},
+	"mongo": {
+		"connection_string": "mongodb://localhost:27017/notetasticAPI"
+	}
 }
