tweaked services configuration and config file

--- a/NotetasticApi/appsettings.json
+++ b/NotetasticApi/appsettings.json
@@ -9,6 +9,7 @@
 		"key": "superdupersecret"
 	},
 	"mongo": {
-		"connection_string": "mongodb://localhost:27017/notetasticAPI"
+		"connection_string": "mongodb://localhost:27017/notetasticAPI",
+		"db_name": "notetasticAPI"
 	}
 }
