--- a/webclient/package.json
+++ b/webclient/package.json
@@ -14,10 +14,13 @@
 		"eject": "react-scripts-ts eject"
 	},
 	"devDependencies": {
+		"@types/fetch-mock": "^6.0.4",
 		"@types/jest": "^23.1.3",
 		"@types/node": "^10.12.2",
 		"@types/react": "^16.4.18",
 		"@types/react-dom": "^16.0.9",
+		"fetch-mock": "^7.2.5",
+		"node-fetch": "^2.2.0",
 		"typescript": "^3.1.6"
 	}
 }
