--- a/webclient/tsconfig.json
+++ b/webclient/tsconfig.json
@@ -20,7 +20,8 @@
 		"importHelpers": true,
 		"strictNullChecks": true,
 		"suppressImplicitAnyIndexErrors": true,
-		"noUnusedLocals": true
+		"noUnusedLocals": true,
+		"downlevelIteration": true
 	},
 	"exclude": [
 		"node_modules",
