--- a/webclient/package.json
+++ b/webclient/package.json
@@ -3,25 +3,45 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"formik": "^1.3.1",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
-		"react-scripts-ts": "3.1.0",
+		"react-scripts": "^2.1.1",
 		"rxjs": "^6.3.3"
 	},
 	"scripts": {
-		"start": "react-scripts-ts start",
-		"build": "react-scripts-ts build",
-		"test": "react-scripts-ts test --env=jsdom",
-		"eject": "react-scripts-ts eject"
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject",
+		"storybook": "start-storybook -p 9009 -s public",
+		"build-storybook": "build-storybook -s public"
 	},
 	"devDependencies": {
+		"@babel/core": "^7.1.5",
+		"@storybook/addon-actions": "^4.0.4",
+		"@storybook/addon-info": "^4.0.4",
+		"@storybook/addon-links": "^4.0.4",
+		"@storybook/addons": "^4.0.4",
+		"@storybook/react": "^4.0.4",
 		"@types/fetch-mock": "^6.0.4",
 		"@types/jest": "^23.1.3",
 		"@types/node": "^10.12.2",
 		"@types/react": "^16.4.18",
 		"@types/react-dom": "^16.0.9",
+		"@types/storybook__addon-actions": "^3.4.1",
+		"@types/storybook__react": "^4.0.0",
+		"awesome-typescript-loader": "^5.2.1",
+		"babel-loader": "^8.0.4",
 		"fetch-mock": "^7.2.5",
 		"node-fetch": "^2.2.0",
+		"react-docgen-typescript-webpack-plugin": "^1.1.0",
 		"typescript": "^3.1.6"
-	}
+	},
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
