--- a/webclient/package.json
+++ b/webclient/package.json
@@ -19,11 +19,11 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.1.5",
-		"@storybook/addon-actions": "^4.0.4",
-		"@storybook/addon-info": "^4.0.4",
-		"@storybook/addon-links": "^4.0.4",
-		"@storybook/addons": "^4.0.4",
-		"@storybook/react": "^4.0.4",
+		"@storybook/addon-actions": "4.0.3",
+		"@storybook/addon-info": "4.0.3",
+		"@storybook/addon-links": "4.0.3",
+		"@storybook/addons": "4.0.3",
+		"@storybook/react": "4.0.3",
 		"@types/fetch-mock": "^6.0.4",
 		"@types/jest": "^23.1.3",
 		"@types/node": "^10.12.2",
