--- a/webclient/package.json
+++ b/webclient/package.json
@@ -29,6 +29,7 @@
 		"@types/node": "^10.12.2",
 		"@types/react": "^16.4.18",
 		"@types/react-dom": "^16.0.9",
+		"@types/react-test-renderer": "^16.0.3",
 		"@types/storybook__addon-actions": "^3.4.1",
 		"@types/storybook__react": "^4.0.0",
 		"awesome-typescript-loader": "^5.2.1",
@@ -36,6 +37,7 @@
 		"fetch-mock": "^7.2.5",
 		"node-fetch": "^2.2.0",
 		"react-docgen-typescript-webpack-plugin": "^1.1.0",
+		"react-test-renderer": "^16.6.1",
 		"typescript": "^3.1.6"
 	},
 	"browserslist": [
