--- a/webclient/package.json
+++ b/webclient/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@types/react-router-dom": "^4.3.1",
 		"formik": "^1.3.1",
+		"lodash": "^4.17.11",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
 		"react-router-dom": "^4.3.1",
@@ -28,6 +29,7 @@
 		"@storybook/react": "4.0.3",
 		"@types/fetch-mock": "^6.0.4",
 		"@types/jest": "^23.1.3",
+		"@types/lodash": "^4.14.118",
 		"@types/node": "^10.12.2",
 		"@types/react": "^16.4.18",
 		"@types/react-dom": "^16.0.9",
