--- a/webclient/package.json
+++ b/webclient/package.json
@@ -24,6 +24,7 @@
 		"@babel/core": "^7.1.5",
 		"@storybook/addon-actions": "4.0.3",
 		"@storybook/addon-info": "4.0.3",
+		"@storybook/addon-knobs": "^4.0.3",
 		"@storybook/addon-links": "4.0.3",
 		"@storybook/addons": "4.0.3",
 		"@storybook/react": "4.0.3",
@@ -35,6 +36,7 @@
 		"@types/react-dom": "^16.0.9",
 		"@types/react-test-renderer": "^16.0.3",
 		"@types/storybook__addon-actions": "^3.4.1",
+		"@types/storybook__addon-knobs": "^3.4.1",
 		"@types/storybook__react": "^4.0.0",
 		"awesome-typescript-loader": "^5.2.1",
 		"babel-loader": "^8.0.4",
