--- a/webclient/package.json
+++ b/webclient/package.json
@@ -3,8 +3,8 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"@types/react-router-dom": "^4.3.1",
 		"formik": "^1.3.1",
+		"leaflet": "^1.3.4",
 		"lodash": "^4.17.11",
 		"react": "^16.6.0",
 		"react-dom": "^16.6.0",
@@ -30,10 +30,12 @@
 		"@storybook/react": "4.0.3",
 		"@types/fetch-mock": "^6.0.4",
 		"@types/jest": "^23.1.3",
+		"@types/leaflet": "^1.2.14",
 		"@types/lodash": "^4.14.118",
 		"@types/node": "^10.12.2",
 		"@types/react": "^16.4.18",
 		"@types/react-dom": "^16.0.9",
+		"@types/react-router-dom": "^4.3.1",
 		"@types/react-test-renderer": "^16.0.3",
 		"@types/storybook__addon-actions": "^3.4.1",
 		"@types/storybook__addon-knobs": "^3.4.1",
